# demo-python-profiling-a-particle-simulator

./: .gitignore  Makefile  README.md  main.py  main_benchmark.py  main_optimized.py  pyproject.toml  test_benchmark.py  test_benchmark_optimized.py  test_particle_simulator.py  test_particle_simulator_with_bench.py
profiling_bytecode/: README.md  profiling_main.py
profiling_memory/: README.md  benchmark_memory.py  benchmark_memory_optimized.py
