[tool.poetry]
name = "demo-particle-simulator"
version = "0.1.0"
description = ""
authors = ["paulo.barbosa <paulo.barbosa@farfetch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
line-profiler = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
